owncloud-news (1.605)
* Adding feeds does not block the input box any more
* Always display empty folders

owncloud-news (1.604)
* Use 64bit integers to prevent running out of ids after a year for large installations
* Fix postgres feed queries with correct group by
* Article enhancers now transform relative links on a page to absolute links

owncloud-news (1.603)
* Fix JavaScript errors which prevented the translation elements from being removed

owncloud-news (1.602)
* Remove removed class from container
* Go back to allow feeds per url from input
* Added ThemeRepublic.net Enhancer
* Remove unsigned from articles_per_update column to not fail with a weird error
* Manually convert &apos; to ' in title and author fields of articles because its not build into PHP
* Fix localisation of app name in tab title

owncloud-news (1.601)
* Remove Google Reader import
* Replace Google Reader import with export and import of unread and starred articles
* Autopurge limit is now added to the number of articles each feed gets when it updates
* Fix CORS headers for OPTIONS request deeper than one level
* Use before and after update cleanup hooks to make sure that read items are not turned unread again after an update. This breaks custom updaters. The updater script has been adjusted accordingly
* Implement pull to refresh
* Use Bower for JavaScript dependency management

owncloud-news (1.404)
* Fix bug on postgres databases that would not delete old articles

owncloud-news (1.403)
* Respect encoding in feed enhancers
* Hotfix for update on posgresql databases

owncloud-news (1.402)
* Add possibility of adding more than one xpath for article enhancer
* Fix bug that wouldn't delete old read articles

owncloud-news (1.401)
* Add possibility to hook up article enhancers which fetch article content directly from the web page
* Add article enhancer for explosm.net to directly fetch comics and shorts