@@ -1,6 +1,7 @@
 owncloud-news (1.605)
 * Adding feeds does not block the input box any more
 * Always display empty folders
+* Better description for hiding/showing read articles
 
 owncloud-news (1.604)
 * Use 64bit integers to prevent running out of ids after a year for large installations
